# search-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  render.yaml  requirements.txt  searchweb.py
.github/agents/: my-agent.agent.md
.github/workflows/: gch.yml
searchweb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_basic.py
