[project]
name = "dataorchestra"
version = "0.0.1"
description = "A toolkit for cleaning and preparing text datasets for LLM training and finetuning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
anyio==4.11.0
beautifulsoup4==4.14.2
brotli==1.2.0
bs4==0.0.2
certifi==2025.11.12
charset-normalizer==3.4.4
click==8.3.1
ddgs==9.9.1
fake-useragent==2.2.0
h11==0.16.0
h2==4.3.0
hpack==4.1.0
httpcore==1.0.9
httpx==0.28.1
hyperframe==6.1.0
idna==3.11
lxml==6.0.2
packaging==25.0
pillow==12.0.0
primp==0.15.0
pytesseract==0.3.13
requests==2.32.5
sniffio==1.3.1
socksio==1.0.0
soupsieve==2.8
tqdm==4.67.1
typing-extensions==4.15.0
urllib3==2.5.0

]
